--- a/SimpleGame.API/SimpleGame.API.csproj
+++ b/SimpleGame.API/SimpleGame.API.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="OpenTK.Mathematics" Version="4.4.0" />
+  </ItemGroup>
+
 </Project>
