--- a/SimpleGame/SimpleGame.csproj
+++ b/SimpleGame/SimpleGame.csproj
@@ -14,12 +14,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="bin\**" />
+    <EmbeddedResource Remove="bin\**" />
+    <None Remove="bin\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Remove="C:\Users\Smile\.nuget\packages\sharpfont.dependencies\2.6.0\build\..\bin\msvc10\x86\freetype6.dll" />
     <Content Remove="C:\Users\Smile\.nuget\packages\sharpfont\4.0.1\build\..\config\SharpFont.dll.config" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="CjClutter.ObjLoader" Version="1.0.0" />
+    <PackageReference Include="AssimpNet" Version="4.1.0" />
     <PackageReference Include="FreeTypeSharp" Version="1.1.3" />
     <PackageReference Include="OpenTK" Version="4.4.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="1.0.2" />
